# MapReducePhase1

./: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  Mapper.cpp  Mapper.h  README.md  Reducer.cpp  Reducer.h  Shuffler.cpp  Shuffler.h  main.cpp  mapReducePhase1  runScratch  runScratch_Hal  scratch_stuff_notes.txt
